Fix docs footer alignment

--- a/docs/raw/scss/components/_footer.scss
+++ b/docs/raw/scss/components/_footer.scss
@@ -6,7 +6,7 @@
 
     &-nav {
         &, ul {
-            @include flecss_class("flex");
+            @include flecss_class("flex_horizontal");
             
             flex-wrap: nowrap;
             justify-content: space-between;
